--- a/src/styles/global/index.css
+++ b/src/styles/global/index.css
@@ -1,6 +1,11 @@
 @import "./fontface.css";
 @import "./keyframe-animations.css";
 
+html, body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
   margin: 0;
   cursor: none !important;
